--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hill Associates Classroom Files
+title: Hill Associates Classroom Filess
 email: admin@hill.com
 description: >- # this means to ignore newlines until "baseurl:"
   This site contains links and files for the sole use of Hill Associates
