--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hill Associates Classroom Filess
-email: admin@hill.com
+title: Hill Associates Classroom Files
+email: matt@kolon.org
 description: >- # this means to ignore newlines until "baseurl:"
   This site contains links and files for the sole use of Hill Associates
   class participants.
